azure/traffic-shifting/shopping-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  generation: 3
  labels:
    createdby: tanzu
  name: nsxsm.gns.rickacme.shopping
  namespace: acme-fitness
spec:
  exportTo:
  - .
  - istio-system
  host: shopping.acme-fitness.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: v1
    trafficPolicy:
      tls:
        mode: DISABLE
  - labels:
      version: v2
    name: v2
    trafficPolicy:
      tls:
        mode: DISABLE
