azure/traffic-shifting/traffic-steering-manual.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-traffic-shifting
spec:
  exportTo:
  - .
  - istio-system
  gateways:
  - istio-system/acme-gateway
  hosts:
  - acme.test.io
  http:
  - headers:
      request:
        add:
          x-allspark-request-header: rickaks-west
    name: weight-based
    route:
    - destination:
        host: v1.shopping.rick.gns
        port:
          number: 3000
      weight: 2
    - destination:
        host: v2.shopping.rick.gns
        port:
          number: 3000
      weight: 98
