azure/traffic-shifting/vs-simple.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-traffic-shifting
spec:
  hosts:
  - "acme.test.io"
  gateways:
  - istio-system/acme-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: shopping.rick.gns
        port:
          number: 3000
